--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 ---
 layout: page
-title: No Fear. Dream Big. Manifest. Shine. ✨
+title: Welcome to the Playground!
+description: Are you ready for some Serious Fun?
+summary: Are you ready for some Serious Fun?
 ---
+I'm Michał, and I'll be your host 💜 
+
+![Michał in front of the Cabin](/assets/michal-cabin-vibes-profile.jpeg){: width="75%"}
+
+[Enter](/about).
