--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ summary: Are you ready for some Serious Fun?
 ---
 I'm Michał, and I'll be your host 💜 
 
-![Michał in front of the Cabin](/assets/michal-cabin-vibes-profile.jpeg){: width="75%"}
+<img src="/assets/michal-cabin-vibes-profile.jpeg" alt="Michał in front of the Cabin" style="width:75%;">
 
-[Enter](/about).
+<a href="/about">Enter</a>
