--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 ---
 layout: page
-title: Welcome to the Playground!
+title: Welcome to the Cabin!
 description: Are you ready for some Serious Fun?
 summary: Are you ready for some Serious Fun?
 ---
-I'm Michał, and I'll be your host 💜 
+
 
 <p>
 </p>
-<img src="/assets/michal-cabin-vibes-profile.jpeg" alt="Michał in front of the Cabin" style="width:75%;">
+<img src="/assets/michal-cabin-vibes-profile.jpeg" alt="Michał in front of the Cabin" style="width:85%;">
 
 <p>
+I'm Michał. Would you like a radish?
+</p>        
+    
+<p>
 
-<a href="/about">Enter</a>
+<b><a href="/about">[ Enter ]</a><b><br>
     
 </p>
