--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: Catalyst Wizard, at Your Service ✨
+title: Hi ✨
 description: Are you ready for some Serious Fun?
 summary: Are you ready for some Serious Fun?
 ---
 
-Welcome! I'm Michał and I transform Potential into Flow.<br>
+Welcome! I'm Michał.<br>
 My friends call me a Wizard 🐲
 
 <p>
