--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 ---
 layout: page
-title: Hi ✨
+title: Hi ✨ I'm Michał
 description: Michał helps groups connect and create togehter.
 summary: Michał helps groups connect and create togehter.
 ---
 
-Welcome! I'm Michał.<br>
-I help groups connect and create together.
+<b>I help groups connect and create together</b>.
 
 <p>
 </p>
@@ -14,7 +13,8 @@ I help groups connect and create together.
 
 <p>
 
-I'm a <b>community catalyst</b>, <b>performing artist</b> and <b>sailor</b>. My friends call me a <b>Wizard</b>.
+I'm a <b>community catalyst</b>, <b>performing artist</b> and <b>sailor</b>. <br>
+My friends call me a <b>Wizard</b>.
     
 </p>
 
@@ -24,7 +24,8 @@ I work with <b>positive impact organisations</b>, such as <a href="https://enspi
 </p>
    
 <p>
-I specialise in <b>using cards to create meaningful interactions and tangible deliverables<b>, such as <i><a href="https://treehousedao.earth">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>.
+
+I specialise in <b>using cards to create meaningful interactions and tangible deliverables</b>, such as <i><a href="https://treehousedao.earth">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>.
   
 </p>
 
