--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@ My friends call me a <b>Wizard</b>.
 </p>
 
 <p>
-I work with <b>positive impact organisations</b>, such as <a href="https://enspiral.com" target="_blank">Enspiral</a> and <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>, <b>enabling playful co-creation<b> and <b>hosting spaces of deep connection</b>.
+I work with <b>positive impact organisations</b>, such as <a href="https://enspiral.com" target="_blank">Enspiral</a> and <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>, <b>enabling playful co-creation</b> and <b>hosting spaces of deep connection</b>.
 
 </p>
-   
 <p>
 
 I specialise in using cards to create meaningful interactions and tangible deliverables, such as <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>.
