--- a/index.html
+++ b/index.html
@@ -45,3 +45,6 @@ Wishing you a delightful day! <br>
 Michał
 
 </p>
+
+<hr>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
