--- a/index.html
+++ b/index.html
@@ -9,28 +9,56 @@ summary: Michał helps groups connect and create togehter.
 
 <p>
 </p>
+
 <img src="/assets/michal-wizard-bounce.jpg" alt="Michał Facilitator" style="width:80%;">      
+
+<p>
+
+I'm a <b>community catalyst</b>, <b>performing artist</b> and <b>sailor</b>. <br>
+My friends call me a <b>Wizard</b>.
+    
+</p>
+
+<p>
+I work with <b>positive impact organisations</b>, such as <a href="https://enspiral.com" target="_blank">Enspiral</a> and <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>, <b>enabling playful co-creation</b> and <b>hosting spaces of deep connection</b>.
 
 </p>
 
-I'm a **community catalyst**, **performing artist** and **sailor**. My friends call me a **Wizard**.
+<p>
 
-I work with **positive impact organisations**, such as [Enspiral](https://enspiral.com) and [Traditional Dream Factory](https://traditionaldreamfactory.com), **enabling playful co-creation** and **hosting spaces of deep connection**.
+I specialise in using cards to create meaningful interactions and tangible deliverables, such as <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>.
+  
+</p>
 
-I specialise in **using cards to create meaningful interactions and tangible deliverables**, such as "*[How to Build a Regenerative Village](https://treehousedao.earth)*" - a book created during an 11-day mastermind, with the process documented live in this twitter thread. LINK
-## Catalyst Wizard, At Your Service 🧙‍♂️
+<h2>Catalyst Wizard, At Your Service</h2>
 
-You can invite me for a **residency** or book a **consulting** conversation.
+<p>
 
-ACTION
+You can invite me for a <b>residency</b> or book a <b>consulting</b> conversation.
+  
+</p>
 
-## Wild Cards 🃏
+<h2>Wild Cards 🃏 </h2>
 
- I created a unique [Card Wizard Experience](https://wildwizards.xyz) using a deck of cards designed to create meaningful interactions, with a dash of playful mischief. The limited edition of 50 decks comes with cards illustrated by [Silvia](https://silviamakesdrawings.com) in pouches handcrafted by [Juliana](https://)Made in Europe, with no plastic. LINK. 
+<p>
 
-## Contact
+I created a unique <a href="https://wildwizards.xyz" target="_blank">Card Wizard Experience</a> using a deck of cards designed to create meaningful interactions, with a dash of playful mischief.
 
-If you're curious about my personal journey, I invite you to read my [Moonly Reviews](/moonly-reviews), follow my adventures on [twitter](https://twitter.com/michalkorzonek), and support my work on [Patreon](https://patreon.com/michalkorzonek).
+</p>    
 
-Wishing you a delightful day!
+<h2>Contact</h2>
+
+<p>
+    
+If you're curious about my personal journey, I invite you to read my <a href="/moonly-reviews">Moonly Reviews</a>, follow my adventures on <a href="https://twitter.com/michalkorzonek" target="_blank">twitter</a>, and support my work on <a href="https://patreon.com/michalkorzonek" target="_blank">Patreon</a>.
+   
+</p>
+
+<p>
+
+Wishing you a delightful day! <br>
 Michał
+
+</p>
+
+<hr>
