--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ You can invite me for a <b>residency</b> or book a <b>consulting</b> conversatio
 
 <p>
 
-I created a unique <a href="https://wildwizards.xyz" target="_blank">Card Wizard Experience</a> using a deck of cards designed to create meaningful interactions, with a dash of playful mischief.
+    I created a unique <a href="https://wildwizards.xyz" target="_blank"><b>Card Wizard Experience</b></a> using a deck of cards designed to create meaningful interactions, with a dash of playful mischief.
 
 </p>    
 
@@ -50,7 +50,7 @@ I created a unique <a href="https://wildwizards.xyz" target="_blank">Card Wizard
 
 <p>
     
-If you're curious about my personal journey, I invite you to read my <a href="/moonly-reviews">Moonly Reviews</a>, follow my adventures on <a href="https://twitter.com/michalkorzonek" target="_blank">twitter</a>, and support my work on <a href="https://patreon.com/michalkorzonek" target="_blank">Patreon</a>.
+    If you're curious about my personal journey, I invite you to read my <a href="/moonly-reviews"><b>Moonly Reviews</b></a>, follow my adventures on <a href="https://twitter.com/michalkorzonek" target="_blank"><b>twitter</b></a>, and support my work on <a href="https://patreon.com/michalkorzonek" target="_blank"><b>Patreon</b></a>.
    
 </p>
 
