--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Hi ✨ I'm Michał
-description: Michał helps groups connect and create togehter.
-summary: Michał helps groups connect and create togehter.
+description: I help groups connect and create togehter.
+summary: I help groups connect and create togehter.
 ---
 
 <b>I help groups connect and create together</b>.
