--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ I work with <b>positive impact organisations</b>, such as <a href="https://enspi
 
 <p>
 
-I specialise in using cards to create meaningful interactions and tangible deliverables, such as <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>.
+    I specialise in using cards to create <b>meaningful interactions and tangible deliverables</b>, such as <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>.
   
 </p>
 
