--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ I work with <b>positive impact organisations</b>, such as <a href="https://enspi
 
 <p>
 
-    I specialise in using cards to create <b>meaningful interactions and tangible deliverables</b>, such as <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>.
+    I specialise in using cards to create <b>meaningful interactions and tangible deliverables</b>, such as <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i> - a book created during an 11-day mastermind, with the process documented live in <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>. I'm hosting another mastermind in Switzerland this October. <a href="https://www.vermonthub.ch/mastermind" target="_blank">Have a look 👀</a>
   
 </p>
 
@@ -44,7 +44,11 @@ You can invite me for a <b>residency</b> or book a <b>consulting</b> conversatio
 
     I created a unique <a href="https://wildwizards.xyz" target="_blank"><b>Card Wizard Experience</b></a> using a deck of cards designed to create meaningful interactions, with a dash of playful mischief.
 
-</p>    
+</p>
+
+<h2>Sailing Expeditions ⛵️</h2>
+
+Sea is the perfect space for culture building experiments. I am a co-captain of Sheepy Ship, a camp at European Burn Nowhere, on a mission to be the connecting points for sailors and hosting transformative experiences at sea. A boat is a fantastic lab for building culture in a radical self reliance environment. I'm in the process of getting a commercial license for sailing ships up to 500 tons. More info on my <a href="/sailing">sailing page</a>.
 
 <h2>Contact</h2>
 
