--- a/index.html
+++ b/index.html
@@ -20,15 +20,25 @@ My friends call me a <b>Wizard</b>.
 </p>
 
 <p>
-    I'm a European representative of the social impact collective <a href="https://enspiral.com" target="_blank">Enspiral</a>, member of a regenerative village <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>, lead facilitator of a publishing studio <a href="https://treehousedao.earth/" target="_blank">Treehouse DAO</a>, and a co-captain of a Nowhere Burn camp <a href="https://sheepyship.carrd.co/" target="_blank"> Sheepy Ship.</a>
-
-</p>
-
-<p>
 
     I specialise in <b>facilitating in-person co-creation events</b>, such as an 11-day mastermind where we wrote a book <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i>, documented extensively in this <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>. I'm hosting another edition in October 2024 focused on <a href="https://www.vermonthub.ch/mastermind" target="_blank">Building Belonging as Semi-Nomads</a>.
   
 </p>
+
+<p>
+
+<b>I work with positive impact organisations and projects</b>. Here's my current roles:
+
+<ul>
+        <li>European representative of the social impact collective <a href="https://enspiral.com" target="_blank">Enspiral</a>
+        <li>member of a regenerative village <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>
+        <li>lead facilitator of a publishing studio <a href="https://treehousedao.earth/" target="_blank">Treehouse DAO</a>
+        <li>co-captain of a Nowhere Burn camp <a href="https://sheepyship.carrd.co/" target="_blank"> Sheepy Ship</a>
+</ul>
+
+</p>
+
+
 
 <h2>Sailing Expeditions ⛵️</h2>
 
