--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: I build thriving communities, on land and at sea.
 summary: I build thriving communities, on land and at sea.
 ---
 
-<b>I build thriving communities, on land and at sea.</b>
+<b>I build thriving communities, on land and at sea 🌳⛵️</b>
 
 <p>
 </p>
@@ -56,7 +56,7 @@ My friends call me a <b>Wizard</b>.
 
 </p>
 
-<h2>Journaling</h2>
+<h2>Journaling 📖</h2>
 
 <p>
 
@@ -64,7 +64,7 @@ My friends call me a <b>Wizard</b>.
 
 </p>
 
-<h2>Catalyst Wizard, At Your Service</h2>
+<h2>Catalyst Wizard, At Your Service </h2>
 
 <p>
     
