--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ My friends call me a <b>Wizard</b>.
 <h2>Catalyst Wizard, At Your Service </h2>
 
 <p>
-    
+ 
 I can help you with:
 
 <ul>
@@ -79,6 +79,13 @@ I can help you with:
       
 </p>
 
+You can book a <b>coaching / consulting / catalysing</b> session by the hour, and choose a price that fits your circumstances:
+
+<a href="https://cal.com/michalroots/catalyst-wizard-s" target="_blank">€100/hour</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://cal.com/michalroots/catalyst-wizard-m" target="_blank">€75/hour</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://cal.com/michalroots/catalyst-wizard-s" target="_blank">€50/hour</a>
 
 <h2>Contact</h2>
 
