--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ summary: I build thriving communities, on land and at sea.
 
 <p>
 
-I'm a <b>community catalyst</b>, <b>performing artist</b> and <b>sailor</b>. <br>
+I'm a <b>catalyst</b>, <b>performing artist</b> and <b>sailor</b>. <br>
 My friends call me a <b>Wizard</b>.
     
 </p>
@@ -27,13 +27,13 @@ My friends call me a <b>Wizard</b>.
 
 <p>
 
-<b>I work with positive impact organisations and projects</b>. Here's my current roles:
+<b>I work with positive impact organisations and projects</b>. Here are my current roles:
 
 <ul>
         <li>European representative of the social impact collective <a href="https://enspiral.com" target="_blank">Enspiral</a>
-        <li>member of a regenerative village <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>
-        <li>lead facilitator of a publishing studio <a href="https://treehousedao.earth/" target="_blank">Treehouse DAO</a>
-        <li>co-captain of a Nowhere Burn camp <a href="https://sheepyship.carrd.co/" target="_blank"> Sheepy Ship</a>
+        <li>Member & Steward Alumni of a regenerative village <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>
+        <li>Lead facilitator of a publishing studio <a href="https://treehousedao.earth/" target="_blank">Treehouse DAO</a>
+        <li>Co-captain of a Nowhere Burn camp <a href="https://sheepyship.carrd.co/" target="_blank"> Sheepy Ship</a>
 </ul>
 
 </p>
@@ -71,7 +71,7 @@ My friends call me a <b>Wizard</b>.
 I can help you with:
 
 <ul>
-<li>bringing epic crew together
+<li>bringing an epic crew together
 <li>facilitating an amazing event
 <li>building a thriving community
 <li>creating a deck of cards
@@ -97,7 +97,7 @@ You can book a <b>coaching / consulting / catalysing</b> session by the hour, an
     
 </p>
 <p>
-    If you're curious about my personal journey, I invite you to read my <a href="/moonly-reviews"><b>Moonly Reviews</b></a>, follow my adventures on <a href="https://twitter.com/michalkorzonek" target="_blank"><b>twitter</b></a>, and support my work on <a href="https://patreon.com/michalkorzonek" target="_blank"><b>Patreon</b></a>.
+    If you're curious about my personal journey, I invite you to read my <a href="/moonly-reviews"><b>Moonly Reviews</b></a>, follow my adventures on <a href="https://twitter.com/michalkorzonek" target="_blank"><b>twitter</b></a>, and <b><a href="https://t.me/+8Q0aaB1jWAplNzZk" target="_blank">telegram</a></b> and support my work on <a href="https://patreon.com/michalkorzonek" target="_blank"><b>Patreon</b></a>.
    
 </p>
 
