--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ My friends call me a <b>Wizard</b>.
 I can help you with:
 
 <ul>
-<li>bringing an epic crew together
-<li>facilitating an amazing event
+<li>facilitating hyper engaging IRL cocreation sprints
+<li>bringing an epic crew together for your Thing
 <li>building a thriving community
 <li>creating a deck of cards
 </ul> 
