--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ My friends call me a <b>Wizard</b>.
 
 <p>
 
-    I specialise in <b>facilitating in-person co-creation events</b>, such as an 11-day mastermind where we wrote a book <i><a href="https://treehousedao.earth" target="_blank">"How to Build a Regenerative Village"</a></i>, documented extensively in this <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>. I'm hosting another edition in October 2024 focused on <a href="https://www.vermonthub.ch/mastermind" target="_blank">Building Belonging as Semi-Nomads</a>.
+    I specialise in <b>facilitating in-person co-creation events</b>, such as an 11-day mastermind where we wrote a book <i><a href="https://treehousecollective.earth" target="_blank">"How to Build a Regenerative Village"</a></i>, documented extensively in this <a href="https://twitter.com/michalkorzonek/status/1565240255564980225" target="_blank">this twitter thread</a>. I'm hosting another edition right now focused on building belonging as semi-nomads. You can follow our journey live in this <a href="https://x.com/michalkorzonek/status/1840820973081088202" target="_blank">twitter thread</a>.
   
 </p>
 
@@ -32,7 +32,7 @@ My friends call me a <b>Wizard</b>.
 <ul>
         <li>European representative of the social impact collective <a href="https://enspiral.com" target="_blank">Enspiral</a>
         <li>Member & Steward Alumni of a regenerative village <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>
-        <li>Lead facilitator of a publishing studio <a href="https://treehousedao.earth/" target="_blank">Treehouse DAO</a>
+        <li>Lead facilitator of a publishing community <a href="https://treehousecollective.earth/" target="_blank">Treehouse Collective</a>
         <li>Co-captain of a Nowhere Burn camp <a href="https://sheepyship.carrd.co/" target="_blank"> Sheepy Ship</a>
 </ul>
 
