--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@ My friends call me a <b>Wizard</b>.
 <p>Facilitation artistry, playful cocreation and books that make an impact.</p>
 
 <ul>
-    <li> <a href="/semi-nomad" target="_blank"><b>"How To Semi-Nomad"</b></a> - 30 days, 14 people, ~867 cards played, 190 pages - "How To Semi-Nomad" </li>
-    <li> <b>"How To Build a Regenerative Village"</b> - 14 days, 28 people, ~500 cards played, 170 pages - "How To Build a Regenerative Village" </li>
+    <li> <a href="/semi-nomad" target="_blank"><b>"How To Semi-Nomad"</b></a> - 30 days, 14 people, ~867 cards played, 190 pages </li>
+    <li> <b>"How To Build a Regenerative Village"</b> - 14 days, 28 people, ~500 cards played, 170 pages</li>
 </ul>
 
+<br>
+
+<p>
 Next: <b>"How to Build Thriving Neighbourhoods with Friends"</b> - April 2025. Join <a href="https://t.me/+OoGbmdqQSkxlZjc0" target="_blank">this telegram group</a> for more info.
+ 
+</p>
 
 <h2>Sailing Expeditions ⛵️</h2>
 
-Sailing ships are the most epic venues in the world. I graduated from world's leading nautical collage to bring you on board.
+<p>Sailing ships are the most epic venues in the world. I graduated from world's leading nautical collage to bring you on board.</p>
 
 <ul>
     <li> <a href="/muddy-tales" target="_blank"><b>Muddy Tales</b></a> - Boat burn expedition on a 30 metre sailing ship (Aug 2024)</li>
@@ -60,6 +65,8 @@ I work with positive impact organisations and projects. Here are my current role
         <li>Member & Steward Alumni of a regenerative village <a href="https://traditionaldreamfactory.com" target="_blank">Traditional Dream Factory</a>
         <li>Co-captain of a Nowhere Burn camp <a href="https://sheepyship.carrd.co/" target="_blank"> Sheepy Ship</a>
 </ul>
+
+<br>
 
 <hr>
 
@@ -90,6 +97,8 @@ You can book a <b>coaching / consulting / catalysing</b> session by the hour, an
 &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
 <a href="https://cal.com/michalroots/catalyst-wizard-s" target="_blank">€70/hour</a>
 </p>
+
+<br>
 
 <hr>
 
