--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ Next: <b>"How to Build Thriving Neighbourhoods with Friends"</b> - April 2025. J
 
 <h2>Sailing Expeditions ⛵️</h2>
 
-<p>Sailing ships are the most epic venues in the world. I graduated from world's leading nautical collage to bring you on board.</p>
+<img src="/assets/grayhound.jpg" alt="Grayhound Sailing Ship" style="width:80%;">
+
+<p>Sailing ships are the most epic venues in the world. I graduated from world's leading nautical collage to bring you on board unique vessels.</p>
 
 <ul>
     <li> <a href="/muddy-tales" target="_blank"><b>Muddy Tales</b></a> - Boat burn expedition on a 30 metre sailing ship (Aug 2024)</li>
@@ -52,8 +54,6 @@ Next: <b>"How to Build Thriving Neighbourhoods with Friends"</b> - April 2025. J
 </ul>
 
 <p>Here's my <a href="/sailing" target="_blank">sailing page.</a></p>
-
-<img src="/assets/grayhound.jpg" alt="Grayhound Sailing Ship" style="width:80%;">
 
 <h2>Building Communities 🌳</h2>
 
