--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ summary: Catalyst Wizard, at Your Service.
 <p>
 </p>
 
-<img src="/assets/muddy-michal-love.jpg" alt="Michał Facilitator" style="width:80%;">      
+<img src="/assets/muddy-michal-love.jpg" alt="Michał smiles at you" style="width:80%;">      
 
 <p>
 
@@ -53,7 +53,7 @@ Let's <a href="/sailing" target="_blank">sail together?</a>
 
 <h2>Catalyst Wizard, At Your Service </h2>
 
-<img src="/assets/bounce-red-wiz.jpg" alt="Michał catalyst" style="width:80%;">
+<img src="/assets/bounce-red-wiz.jpg" alt="Michał as a catalyst wizard" style="width:80%;">
 
 <p> 
     
