--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Catalyst Wizard, at Your Service.
 summary: Catalyst Wizard, at Your Service.
 ---
 
-<b>I build thriving communities, on land and at sea 🌳⛵️</b>
+<b>Catalyst Wizard, at Your Service.</b>
 
 <p>
 </p>
@@ -51,7 +51,7 @@ Here are a few <a href="/projects" target="_blank">selected projects</a>:
 
 Let's <a href="/sailing" target="_blank">sail together?</a>
 
-<h2>Catalyst Wizard, At Your Service </h2>
+<h2>Catalyst Wizard, At Your Service ✨</h2>
 
 <img src="/assets/bounce-red-wiz.jpg" alt="Michał as a catalyst wizard" style="width:80%;">
 
