--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ summary: Catalyst Wizard, at Your Service.
 <p>
 </p>
 
-<img src="/assets/muddy-michal-love.jpg" alt="Michał smiles at you" style="width:80%;">      
+<img src="/assets/michal-bounce-wiz.jpg" alt="Michał smiles at you" style="width:80%;">      
 
 <p>
 
@@ -36,7 +36,7 @@ Here are a few <a href="/projects" target="_blank">selected projects</a>:
 
 <h2>Cardification in progress...🃏</h2>
 
-<img src="/assets/cards-at-bouncespace.jpg" alt="WildCards Session" style="width:80%;">
+<img src="/assets/bounce-wiz-card.jpg" alt="WildCards Session" style="width:80%;">
 
 <p>
 <a href="https://wildcards.gg" target="_blank">(Wild)Cards</a> are my favourite medium. I use them in my work as a facilitator, as well as during immersive art performances. There are no rules.
