--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ My friends call me a <b>Wizard</b>.
 
 <p>
 
-    <b>I specialise in catalysing co-creation</b> in multidisciplinary contexts. <br>
+    <b>I specialise in catalysing co-creation</b> in multidisciplinary contexts.
+    
+</p>    
+<p>
 Here are a few <a href="/projects" target="_blank">selected projects</a>:
 
 </p>    
@@ -49,8 +52,8 @@ Here are a few <a href="/projects" target="_blank">selected projects</a>:
 <p>Sailing ships are the most epic venues in the world. I graduated from world's leading <a href="https://ezsenglish.weebly.com/" target="_blank">nautical college</a> to bring you on board unique vessels.</p>
 
 <ul>
-    <li> <b>Quest Antarctica</b> - 22 day voyage to the end of the world (Feb 2025, documentation in progress)</li>
-    <li> <a href="/muddy-tales" target="_blank"><b>Muddy Tales</b></a> - Boat burn expedition on a 30 metre sailing ship (Aug 2024)</li>
+    <li> <b>Quest Antarctica</b> - 22 day voyage to the end of the world (documentation in progress)</li>
+    <li> <a href="/muddy-tales" target="_blank"><b>Muddy Tales</b></a> - Boat burn expedition on a 30 metre sailing ship</li>
 </ul>
 
 <p>
