--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Let's <a href="/sailing" target="_blank">sail together?</a>
 
     
 </p>
-<h2>Catalyst Wizard, At Your Service ✨</h2>
+<h2 id="catalyst-wizard">Catalyst Wizard, At Your Service ✨</h2>
 
 <img src="/assets/bounce-red-wiz.jpg" alt="Michał as a catalyst wizard" style="width:80%;">
 
