--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: page
 title: Hi ✨ I'm Michał
-description: Catalyst Wizard, at Your Service.
-summary: Catalyst Wizard, at Your Service.
+description: Catalyst Wizard, on Land and at Sea 💧🌳.
+summary: Catalyst Wizard, on Land and at Sea 💧🌳.
 ---
 
-<b>Catalyst Wizard, at Your Service.</b>
+<b>Catalyst Wizard, on Land and at Sea 💧🌳.</b>
 
 <p>
 </p>
@@ -14,10 +14,47 @@ summary: Catalyst Wizard, at Your Service.
 
 <p>
 
-    <b>I build communities on land and at sea.</b> I'm a catalyst, multidisciplinary artist, and a sailor. <br>
+I create <b>unique events</b>, facilitate <b>collaboration</b>, and turn <b>bold ideas</b> into reality. <br>
 My friends call me a <b>Wizard</b>. 
     
 </p>
+
+<hr>
+
+<h2>Choose Your Adventure:</h2>
+
+<img src="/assets/cards-cover.jpg" alt="collection of cards" style="width:80%;">
+<h2>Play cards, make impact</h2>
+Flow-state facilitation, powered by cards.
+<br>
+<b><a href="/cards">/cards</a></b>
+
+<img src="/assets/grayhound.jpg" alt="grayhound sailing ship" style="width:80%;">
+<h2>Sail anywhere, with friends.</h2>
+Curated voyages aboard epic ships.
+<br>
+<b><a href="/cards">/sailing</a></b>
+
+<img src="/assets/grayhound.jpg" alt="grayhound sailing ship" style="width:80%;">
+<h2>Wizard as a service</h2>
+Book me for a podcast, coaching or speaking.
+<br>
+<b><a href="/cards">/wizard</a></b>
+
+<hr>
+
+<h2>Every New Moon I write a heartfelt electronic letter.</h2>
+Add your email address to receive yours.
+
+SUBSTACK
+
+<p>You can also contact me via <a href="/contact">this page</a>.</p>
+
+<hr>
+
+<i>Wishing you a delightful day, <br> Michał</i>
+
+
 
 <p>💧</p>
 
