--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ summary: Catalyst Wizard, on Land and at Sea 💧🌳.
 <p>
 </p>
 
-<img src="/assets/michal-bounce-wiz.jpg" alt="Michał smiles at you" style="width:80%;">      
+<img src="/assets/bounce-red-wiz.jpg.jpg" alt="Michał smiles at you" style="width:80%;">      
 
 <p>
 
@@ -29,32 +29,43 @@ Flow-state facilitation, powered by cards.
 <br>
 <b><a href="/cards">/cards</a></b>
 
+<p></p>
 <img src="/assets/grayhound.jpg" alt="grayhound sailing ship" style="width:80%;">
 <h2>Sail anywhere, with friends.</h2>
 Curated voyages aboard epic ships.
 <br>
-<b><a href="/cards">/sailing</a></b>
+<b><a href="/sailing">/sailing</a></b>
 
-<img src="/assets/grayhound.jpg" alt="grayhound sailing ship" style="width:80%;">
+<p></p>
+
+<!-- <img src="/assets/grayhound.jpg" alt="grayhound sailing ship" style="width:80%;">
 <h2>Wizard as a service</h2>
 Book me for a podcast, coaching or speaking.
 <br>
-<b><a href="/cards">/wizard</a></b>
+<b><a href="/wizard">/wizard</a></b> 
+
+<p></p>
+
+-->
 
 <hr>
 
 <h2>Every New Moon I write a heartfelt electronic letter.</h2>
 Add your email address to receive yours.
 
-SUBSTACK
+<p>
 
+<iframe src="https://michalkorzonek.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+
+</p>
+    
 <p>You can also contact me via <a href="/contact">this page</a>.</p>
 
 <hr>
 
 <i>Wishing you a delightful day, <br> Michał</i>
 
-
+<hr>
 
 <p>💧</p>
 
