--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ summary: Catalyst Wizard, on Land and at Sea 💧🌳.
 <p>
 </p>
 
-<img src="/assets/bounce-red-wiz.jpg.jpg" alt="Michał smiles at you" style="width:80%;">      
+<img src="/assets/bounce-red-wiz.jpg" alt="Michał smiles at you" style="width:80%;">      
 
 <p>
 
