--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Add your email address to receive yours.
 
 <i>Wishing you a delightful day, <br> Michał</i>
 
-<!--
+{% comment %}
 
 <hr>
 
@@ -170,4 +170,4 @@ Michał
 <hr>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
 
--->
+{% endcomment %}
