update jekyll form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@ Add your email address to receive yours.
 
 <p>
 
-<iframe src="https://michalkorzonek.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+<div class="embed-container">
+  <iframe
+    src="https://michalkorzonek.substack.com/embed"
+    width="100%"
+    height="150"
+    style="border:1px solid #EEE; background:white;"
+    frameborder="0"
+    scrolling="no">
+  </iframe>
+</div>
 
 </p>
     
@@ -56,6 +65,8 @@ Add your email address to receive yours.
 <i>Wishing you a delightful day, <br> Michał</i>
 
 {% comment %}
+
+<iframe src="https://michalkorzonek.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
 
 <hr>
 
