--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Curated voyages aboard epic ships.
 
 <h2>Every New Moon I write a heartfelt electronic letter.</h2>
 Add your email address to receive yours.
-<i>Current moon phase:</i> <span id="moon-phase" title="Current Moon Phase">🌑</span>
+<i>Current moon phase:</i>&nbsp;<span id="moon-phase" title="Current Moon Phase">🌑</span>
 
 <script>
 (function() {
