--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@ Curated voyages aboard epic ships.
 <hr>
 
 <h2>Every New Moon I write a heartfelt electronic letter.</h2>
-Add your email address to receive yours.
-<i>Current moon phase:</i>&nbsp;<span id="moon-phase" title="Current Moon Phase">🌑</span>
+<p>
+  Add your email address to receive yours.<br>
+  <i>Current moon phase:</i> <span id="moon-phase" title="Current Moon Phase">🌑</span>
+</p>
 
 <script>
 (function() {
@@ -67,7 +69,6 @@ Add your email address to receive yours.
   });
 })();
 </script>
-
 
 <p>
 
