--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Curated voyages aboard epic ships.
     src="https://michalkorzonek.substack.com/embed"
     width="100%"
     height="150"
-    style="border:1px solid #EEE; background:white;"
+    style="border:1px solid #EEE; background:#f7f7f7;"
     frameborder="0"
     scrolling="no">
   </iframe>
