--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@ Curated voyages aboard epic ships.
 
 <p>
 
-<div class="embed-container">
+<div class="embed-container" style="background: #f7f7f7; border:1px solid #EEE;">
   <iframe
     src="https://michalkorzonek.substack.com/embed"
     width="100%"
     height="150"
-    style="border:1px solid #EEE; background:#f7f7f7;"
+    style="border: none;" 
     frameborder="0"
     scrolling="no">
   </iframe>
@@ -92,6 +92,17 @@ Curated voyages aboard epic ships.
 <i>Wishing you a delightful day, <br> Michał</i>
 
 {% comment %}
+
+<div class="embed-container">
+  <iframe
+    src="https://michalkorzonek.substack.com/embed"
+    width="100%"
+    height="150"
+    style="border:1px solid #EEE; background:#f7f7f7;"
+    frameborder="0"
+    scrolling="no">
+  </iframe>
+</div>
 
 <iframe src="https://michalkorzonek.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
 
